Merge branch 'apps-7027' into 'main'
APPS-7027 Update Gradle, avoid dead Java features

See merge request ggb/geogebra!9953

GitOrigin-RevId: 8dd3c135bec545e44b74e0a0847be6ea20ee1e09